# task4

./: CMakeLists.txt  README.txt  run_script.sh
include/: Print.hpp  WriteInfile.hpp
src/: CMakeLists.txt  main.cpp  print.cpp
